@@ -35,9 +35,10 @@
 #include <glib/gi18n.h>
 
 #include "gedit-close-confirmation-dialog.h"
+#include <gedit/gedit-app.h>
 #include <gedit/gedit-utils.h>
 #include <gedit/gedit-window.h>
-#include <gedit/gedit-app.h>
+
 
 /* Properties */
 enum 
