@@ -121,6 +121,12 @@ void		 _gedit_app_set_lockdown		(GeditApp          *app,
 void		 _gedit_app_set_lockdown_bit		(GeditApp          *app,
 							 GeditLockdownMask  bit,
 							 gboolean           value);
+/*
+ * This one is a gedit-window function, but we declare it here to avoid
+ * #include headaches since it needs the GeditLockdownMask declaration.
+ */
+void		 _gedit_window_set_lockdown		(GeditWindow         *window,
+							 GeditLockdownMask    lockdown);
 
 
 G_END_DECLS
